--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <div>Language.</div>
                 <div class="button">
                     <button class="btn">Download Resume</button>
-                    <a href="https://github.com/Shubham8922" style="text-decoration: none;" target="_blank" button
+                    <a href="https://github.com/Shubham4734singh" style="text-decoration: none;" target="_blank" button
                         class="btn">Visit Github</button></a>
                     <a href="https://www.linkedin.com/in/shubham-singh-a76688296?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
                         style="text-decoration: none;" target="_blank" button class="btn">Visit Linkedin</button></a>
